# poc-classificador-petrobras

./: .gitignore  pyproject.toml
src/: main.py  t.py
src/cloud/onedrive/: upload_files.py
src/data/: dataset.csv
src/data/new_data/: new_insert_data_0
src/drive/: drive_upload_files.py
src/inference/voting_classifier/: consts.py  main.py  predict.py  preprocessing.py
src/model_utils/: increase_data.py
src/models/voting_classifier/: model_soft.joblib  tf_idf.joblib
src/resources/voting_classifier/stopwords/: default.json  index.json
src/utils/: csv_utils.py  save_new_data.py  verify_duplicates.py
